--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "YouSpot",
-  "version": "1",
+  "version": "3",
   "description": "1-click 'Spotify'cation of the currently playing Youtube song. Yup, it's just 1-click away! (For Spotify app users)",
   "icons": { "128": "icon.png" },
   "background": { 
@@ -9,6 +9,7 @@
   "content_scripts": [
     { 
 		"matches": ["http://www.youtube.com/watch?v*", "https://www.youtube.com/watch?v*"], 
+		"css": ["youspot.css"],
 		"js": ["jquery.min.js", "jquery.livequery.js", "json2.js", "parseUri.js", "content_script.js"],
 		"run_at" : "document_idle",
 		"all_frames" : true
@@ -16,11 +17,17 @@
   ],
   "permissions": [
     "tabs",
-	"http://youtube.com/*"
+	"http://www.youtube.com/watch?v*",
+	"https://www.youtube.com/watch?v*"
   ],
   "page_action": {
       "default_name": "Search Youtube song in Spotify",
       "default_icon": "marker.png"
   },
+  "web_accessible_resources": [
+	"jquery.min.js",
+	"youspot.css",
+	"icon-sm.png"
+  ],
   "manifest_version": 2
 }
